--- a/NatifGoogleMap/MyGoogleMap/app/src/main/AndroidManifest.xml
+++ b/NatifGoogleMap/MyGoogleMap/app/src/main/AndroidManifest.xml
@@ -31,10 +31,10 @@
 
         <activity
             android:name=".MapsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <uses-library android:name="com.google.android.maps"/>
