--- a/FunCulture/app/src/main/AndroidManifest.xml
+++ b/FunCulture/app/src/main/AndroidManifest.xml
@@ -5,19 +5,23 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait">
         <receiver android:name=".component.sensor.Geolocalisation.AlertReceiver" />
 
         <activity
             android:name=".main.MainActivity"
             android:label="@string/home"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +29,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.AccelerometerActivity"/>
-        <activity android:name=".activities.PedometerActivity"/>
+        <activity android:name=".activities.AccelerometerActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activities.PedometerActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activities.RecognitionActivity" android:screenOrientation="portrait"/>
+        <service android:enabled="true" android:name="com.example.denis.funculture.component.sensor.ActivityRecognizedService" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
