--- a/FunCulture/app/src/main/AndroidManifest.xml
+++ b/FunCulture/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
 
     <application
         android:allowBackup="true"
@@ -15,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:screenOrientation="portrait">
-        <receiver android:name=".component.sensor.geolocalisation.AlertReceiver" />
+        <receiver android:name=".component.sensor.Geolocalisation.AlertReceiver" />
 
         <activity
             android:name=".main.MainActivity"
@@ -29,9 +34,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".fragments.AccelerometerFragment" android:screenOrientation="portrait"/>
-        <activity android:name=".fragments.PedometerFragment" android:screenOrientation="portrait"/>
-        <activity android:name=".fragments.RecognitionActivityFragment" android:screenOrientation="portrait"/>
+        <fragment android:name=".fragments.AccelerometerqhFragment" android:screenOrientation="portrait"/>
+        <fragment android:name=".fragments.PedometerFragment" android:screenOrientation="portrait"/>
+        <fragment android:name=".fragments.RecognitionActivityFragment" android:screenOrientation="portrait"/>
+        <activity android:name=".fragments.AppareilPhoto" android:screenOrientation="portrait"/>
+
         <service android:enabled="true" android:name="com.example.denis.funculture.component.sensor.ActivityRecognizedService" />
 
         <!--
@@ -46,12 +53,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
+        <fragment
             android:name=".fragments.MapsFragment"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_maps">
             <uses-library android:name="com.google.android.maps"/>
-        </activity>
+        </fragment>
     </application>
 
 </manifest>
