renommage du package géolocalisation (il devait y avoir une majuscule chez quelqu'un se qui faisait un problème au niveau des import et package name car chez moi je n'ai pas de majuscule, comme sourcetree n'est pas sensible a la casse j'ai fait un renommage histoire que tout le modne ai bien la même chose) à l'avenir évitez les majuscule en première lettre sur les noms de packages svp  + déplacement appareil photo sur la liste déroulante des capteurs

--- a/FunCulture/app/src/main/AndroidManifest.xml
+++ b/FunCulture/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:screenOrientation="portrait">
-        <receiver android:name=".component.sensor.Geolocalisation.AlertReceiver" />
+        <receiver android:name=".component.sensor.geoloc.AlertReceiver" />
 
         <activity
             android:name=".main.MainActivity"
@@ -37,7 +37,7 @@
         <fragment android:name=".fragments.AccelerometerqhFragment" android:screenOrientation="portrait"/>
         <fragment android:name=".fragments.PedometerFragment" android:screenOrientation="portrait"/>
         <fragment android:name=".fragments.RecognitionActivityFragment" android:screenOrientation="portrait"/>
-        <activity android:name=".fragments.AppareilPhoto" android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AppareilPhoto" android:screenOrientation="portrait"/>
 
         <service android:enabled="true" android:name="com.example.denis.funculture.component.sensor.ActivityRecognizedService" />
 
