--- a/FunCulture/app/build.gradle
+++ b/FunCulture/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.1.0@aar'
+    compile 'com.google.zxing:core:3.2.0'
+    compile 'junit:junit:4.12'
+    compile 'me.dm7.barcodescanner:zxing:1.9.1'
 }
